--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.4"
+  },
+  "installConfig": {
+    "pnp": true
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "mongoose": "^5.4.17"
   }
 }
