--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "files.associations": {
-        
-    }
+    
+    "npm.enableScriptExplorer": true,
+    "javascript.referencesCodeLens.enabled": true
 }
