--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.4"
-  },
-  "installConfig": {
-    "pnp": true
+    "@babel/preset-env": "^7.3.4",
+    "body-parser": "^1.18.3"
   },
   "dependencies": {
     "express": "^4.16.4",
