--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.4"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.418.0",
+    "uuid": "^3.3.2"
   }
 }
