--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,20 @@
             "type": "node",
             "request": "attach",
             "name": "Attach",
+            "restart": true,
             "port": 9229
         },
        
+{
+    "name": "Launch server.js via nodemon",
+    "type": "node",
+    "request": "launch",
+    "runtimeExecutable": "nodemon",
+    "program": "${workspaceRoot}/src/index.js",
+    "restart": true,
+    "console": "integratedTerminal",
+    "internalConsoleOptions": "neverOpen"
+},
         
       
         {
