--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/index.js",
-    "debug":"node --inspect src/index.js"
+    "debug": "node --inspect src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +15,8 @@
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.4"
+  },
+  "dependencies": {
+    "graphql-yoga": "^1.17.4"
   }
 }
