--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@babel/preset-env": "^7.3.4"
   },
   "dependencies": {
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.1.1",
     "graphql-yoga": "^1.17.4"
   }
 }
