--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.4"
+    "@babel/preset-env": "^7.3.4",
+    "notarealdb": "^0.2.2"
   },
   "dependencies": {
+    "apollo-server": "^2.4.8",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
+    "graphql-tools": "^4.0.4",
     "graphql-yoga": "^1.17.4"
   }
 }
