--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node src/index.js"
+    "start": "nodemon --exec babel-node src/index.js ",
+    "debug": "node --inspect src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,8 @@
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.4"
+  },
+  "dependencies": {
+    "mysql": "^2.17.1"
   }
 }
