--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/index.js ",
-    "debug": "node --inspect src/index.js"
+    "debug": "node --inspect src/index.js",
+    "dev": "nodemon src/Practice/index.ts",
+    "dev:debug": "nodemon --inspect src/Practice/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +16,14 @@
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.4"
+    "@babel/preset-env": "^7.3.4",
+    "typescript": "^3.7.3"
   },
   "dependencies": {
+    "axios": "^0.19.1",
     "express": "^4.17.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "socket.io": "^2.3.0",
+    "ts-node": "^8.5.4"
   }
 }
